# auto

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  dev.env  justfile
.github/workflows/: release.yml
admin-auto-mcp-server/: .env.example  .gitignore  PROJECT_SUMMARY.md  QUICK_START.md  README.md  USAGE.md  package-lock.json  package.json  test-connection.js
admin-auto-mcp-server/src/: constants.ts  index.ts  types.ts
admin-auto-mcp-server/src/schemas/: common.ts
admin-auto-mcp-server/src/services/: api-client.ts  formatters.ts
frontend/: index.html  justfile  package.json  tsconfig.json  vite.config.js
frontend/src/: App.vue  router.ts  style.css
migrations/: 20260123132438_create_applications.sql  20260123140001_extend_applications.sql  20260123140002_create_hosts.sql  20260123140003_create_domains.sql  20260123140004_create_people.sql  20260123140005_create_clients.sql  20260123140006_create_shares.sql  20260123140007_create_notes.sql  20260127100000_create_stacks.sql  20260128151047_create_service.sql  20260128152031_application_add_environment.sql  20260128152247_create_infra.sql  20260128152634_application_add_url.sql  20260128160000_drop_host.sql  20260128170813_domain_target_infra.sql  20260129105406_application_name_env_unique.sql  20260129105847_create_indexes.sql  20260129110417_service_name_env_unique.sql  20260129134457_remove_ssl_fields.sql  20260130131054_domain_add_target.sql  20260205120000_create_healthcheck.sql  20260218152313_healthcheck_add_retry.sql  20260218162719_application_add_image_refs.sql  20260219100835_healthcheck_add_kuma_id.sql  20260219104747_healthcheck_add_interval.sql  20260219120000_healthcheck_add_kuma_dirty.sql  20260223120000_add_outline_url.sql
scripts/: kuma_export.py  push_to_kuma.py
src/: config.rs  error.rs  kuma.rs  lib.rs  main.rs  openapi.rs  outline.rs  overview.rs  routes.rs
src/api/: applications.rs  clients.rs  dashboard.rs  domains.rs  healthchecks.rs  hosts.rs  infra.rs  mod.rs  notes.rs  outline.rs  people.rs  search.rs  services.rs  shares.rs  stacks.rs
src/models/: application.rs  client.rs  domain.rs  healthcheck.rs  host.rs  infra.rs  mod.rs  network_share.rs  note.rs  person.rs  service.rs  stack.rs  uptime.rs
src/service/: application.rs  client.rs  dashboard.rs  domain.rs  healthcheck.rs  host.rs  infra.rs  mod.rs  network_share.rs  note.rs  person.rs  search.rs  service.rs  stack.rs
(+78 files in other folders)
